# pookiefy

./: .breakpoints  .cache  .env  .replit  Pookiefy.apk  admin.txt  app.py  pyproject.toml  requirements.txt  saved-designs.txt
instance/: accountdatabase.db
migrations/versions/: 8c3c38ca2b65_initial_migration.py
static/: style.css
static/css/: contact.css  landing_page.css  library.css  login.css  login_modal.css  nav.css  style-copy.css  style.css  styles.css
static/js/: index.js  landing_page.js  meow.js  script-copy.js  script.js
static/subjects/: biology.js  chemistry.js  computer.js  kannda.js  maths.js  physics.js
templates/: 401.html  403.html  404.html  admin.html  base.html  change_password.html  contact.html  home.html  index.html  landing_page.html  login.html  manage_users.html  registration_confirmation.html  thank_you_for_contacting.html
templates/partials/: guest_main.html  library.html  logged_in_main.html
