[tool.poetry]
name = "repl-nix-horizonlearners"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_horizonlearners"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
werkzeug = "^3.0.3"
flask-cors = "^4.0.1"
flask-mail = "^0.10.0"
flask-migrate = "^4.0.7"
requests = "^2.32.3"
itsdangerous = "^2.2.0"
pymongo = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
